--- a/mypoke/src/token.css
+++ b/mypoke/src/token.css
@@ -1,5 +1,5 @@
 :root {
-    --color-green: #74CB48;
+    --color-grass: #74CB48;
+    --color-white: #FFFFFF;
     --color-shadow: rgba(0, 0, 0, 0.25);
-    --color-white: rgba(0, 0, 0, 0.25);
 }
