--- a/mypoke/src/index.css
+++ b/mypoke/src/index.css
@@ -21,14 +21,53 @@ code {
   border-radius: 0.75rem;
   background-color: var(--color-grass);
   box-shadow:0.125rem 0.125rem 0.25rem var(--color-shadow);
-  padding: 0.313rem;
-}
 
+}
+.card__header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.5rem;
+}
 .card__section{
-  
-  width: 100%;
   height: 15rem;
   border-radius: 0.5rem;
   background-color: var(--color-white);
+  margin: 0.25rem;
+}
+
+.card_section--container{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+} 
+
+.card__badge--grass{
+    background-color: var(--color-grass);
+    border-radius: 0.625rem;
+    padding: 0.125rem 0.5rem;
+
 
 }
+
+.card__badge--poison{
+    background-color: var(--color-poison); 
+    border-radius: 0.625rem;
+    padding: 0.125rem 0.5rem;
+
+}
+
+.about{
+
+}
+
+.card_section--container{
+  display: flex;
+
+}
+
+
+
+
+  
+
