--- a/mypoke/src/token.css
+++ b/mypoke/src/token.css
@@ -1,5 +1,8 @@
 :root {
     --color-grass: #74CB48;
+    --color-poison: #A43E9E; 
     --color-white: #FFFFFF;
     --color-shadow: rgba(0, 0, 0, 0.25);
+   
+
 }
